--- a/module_1/movie.ipynb
+++ b/module_1/movie.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597854962709",
+   "name": "python_defaultSpec_1598294197093",
    "display_name": "Python 3.8.2 64-bit"
   }
  },
@@ -23,19 +23,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "                                                  imdb_id\ngenres                                                   \nAction|Adventure|Drama|Mystery|Science Fiction  tt0448011\nAction|Adventure|Mystery|Thriller               tt0465234\nAction|Crime                                    tt1250777\nAction|Crime|Drama|Thriller                     tt1656186\nAction|Crime|Thriller                           tt0814022\nAction|Drama|Thriller                           tt1214962\nAction|Fantasy|Thriller                         tt1071875\nAction|Science Fiction|Thriller                 tt0435705\nAdventure|Action|Thriller|Mystery               tt0368891\nAdventure|Animation|Comedy|Family|Fantasy       tt0481499\nAdventure|Fantasy|Action                        tt0479997\nAnimation|Action|Family|Science Fiction         tt0375568\nComedy|Crime|Drama                              tt0268126\nComedy|Drama                                    tt0384680\nComedy|Drama|Romance|Fantasy                    tt0218967\nCrime|Drama|Thriller                            tt1674784\nDrama|Action|History|War                        tt0245562\nDrama|Crime                                     tt1095217\nDrama|History|Thriller                          tt0469641\nFantasy|Adventure|Action|Comedy|Drama           tt0963966\nFantasy|Adventure|Animation|Comedy|Family       tt0429589\nFantasy|Thriller|Action|Crime                   tt1502404\nThriller|Action|Fantasy|Horror                  tt0259324\nThriller|Action|Science Fiction                 tt2467046\nThriller|Crime                                  tt2005374",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>imdb_id</th>\n    </tr>\n    <tr>\n      <th>genres</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Action|Adventure|Drama|Mystery|Science Fiction</th>\n      <td>tt0448011</td>\n    </tr>\n    <tr>\n      <th>Action|Adventure|Mystery|Thriller</th>\n      <td>tt0465234</td>\n    </tr>\n    <tr>\n      <th>Action|Crime</th>\n      <td>tt1250777</td>\n    </tr>\n    <tr>\n      <th>Action|Crime|Drama|Thriller</th>\n      <td>tt1656186</td>\n    </tr>\n    <tr>\n      <th>Action|Crime|Thriller</th>\n      <td>tt0814022</td>\n    </tr>\n    <tr>\n      <th>Action|Drama|Thriller</th>\n      <td>tt1214962</td>\n    </tr>\n    <tr>\n      <th>Action|Fantasy|Thriller</th>\n      <td>tt1071875</td>\n    </tr>\n    <tr>\n      <th>Action|Science Fiction|Thriller</th>\n      <td>tt0435705</td>\n    </tr>\n    <tr>\n      <th>Adventure|Action|Thriller|Mystery</th>\n      <td>tt0368891</td>\n    </tr>\n    <tr>\n      <th>Adventure|Animation|Comedy|Family|Fantasy</th>\n      <td>tt0481499</td>\n    </tr>\n    <tr>\n      <th>Adventure|Fantasy|Action</th>\n      <td>tt0479997</td>\n    </tr>\n    <tr>\n      <th>Animation|Action|Family|Science Fiction</th>\n      <td>tt0375568</td>\n    </tr>\n    <tr>\n      <th>Comedy|Crime|Drama</th>\n      <td>tt0268126</td>\n    </tr>\n    <tr>\n      <th>Comedy|Drama</th>\n      <td>tt0384680</td>\n    </tr>\n    <tr>\n      <th>Comedy|Drama|Romance|Fantasy</th>\n      <td>tt0218967</td>\n    </tr>\n    <tr>\n      <th>Crime|Drama|Thriller</th>\n      <td>tt1674784</td>\n    </tr>\n    <tr>\n      <th>Drama|Action|History|War</th>\n      <td>tt0245562</td>\n    </tr>\n    <tr>\n      <th>Drama|Crime</th>\n      <td>tt1095217</td>\n    </tr>\n    <tr>\n      <th>Drama|History|Thriller</th>\n      <td>tt0469641</td>\n    </tr>\n    <tr>\n      <th>Fantasy|Adventure|Action|Comedy|Drama</th>\n      <td>tt0963966</td>\n    </tr>\n    <tr>\n      <th>Fantasy|Adventure|Animation|Comedy|Family</th>\n      <td>tt0429589</td>\n    </tr>\n    <tr>\n      <th>Fantasy|Thriller|Action|Crime</th>\n      <td>tt1502404</td>\n    </tr>\n    <tr>\n      <th>Thriller|Action|Fantasy|Horror</th>\n      <td>tt0259324</td>\n    </tr>\n    <tr>\n      <th>Thriller|Action|Science Fiction</th>\n      <td>tt2467046</td>\n    </tr>\n    <tr>\n      <th>Thriller|Crime</th>\n      <td>tt2005374</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 106
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "max() arg is an empty sequence",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-38-2f0428e4b4c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     97\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcompanies\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m     \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mproduction_companies\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moriginal_title\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 99\u001b[1;33m     \u001b[0mtitles\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtitles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompanie\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moriginal_title\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    100\u001b[0m \u001b[0mtitles\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[1;31m# titles[titles.companie == 'Legendary Pictures']['count'] = 1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: max() arg is an empty sequence"
+     ]
     }
    ],
    "source": [
@@ -61,6 +63,7 @@
     "\n",
     "actors = get_list(data.cast.values)\n",
     "genres = get_list(data.genres.values)\n",
+    "companies = get_list(data.production_companies.values)\n",
     "\n",
     "data[(data.revenue - data.budget) == max(data.revenue - data.budget)]\n",
     "answers['6'] = 'Avatar +'\n",
@@ -99,6 +102,51 @@
     "\n",
     "\n",
     "data[data.cast.str.contains('Nicolas Cage')].groupby(['genres'])[['imdb_id']].max()\n",
+    "\n",
+    "####### 18 - 22\n",
+    "\n",
+    "res = data[(data.production_companies.str.contains('Paramount Pictures') == True) &(data.revenue - data.budget)]\n",
+    "answers['18'] = 'Next (tt0435705) -' #!!!!\n",
+    "##\n",
+    "res = data.pivot_table(values='revenue', index='release_year', aggfunc=\"sum\")\n",
+    "res.sort_values('revenue', ascending=False)\n",
+    "answers['19'] = '2015 +'\n",
+    "##\n",
+    "sm_data = data[(data.production_companies.str.contains('Warner Bros') == True)]\n",
+    "sm_data['profit'] = sm_data.revenue - sm_data.budget\n",
+    "res = sm_data.pivot_table(values='profit',index=\"release_year\", aggfunc=\"sum\")\n",
+    "res.sort_values('profit', ascending=False)\n",
+    "answers['20'] = '2014 +'\n",
+    "##\n",
+    "data['release_month'] = pd.DatetimeIndex(data.release_date).month\n",
+    "res = data.pivot_table(values='imdb_id', index='release_month', aggfunc='count').sort_values('imdb_id', ascending=False)\n",
+    "answers['21'] = 'Сентябрь +'\n",
+    "##\n",
+    "sm_data = data[(data.release_month == 8) | (data.release_month == 7) | (data.release_month == 6)]\n",
+    "len(sm_data)\n",
+    "answers['22'] = '450 +'\n",
+    "\n",
+    "####### 23 - 27\n",
+    "\n",
+    "winter_films = data[(data.release_month == 12) | (data.release_month == 1) | (data.release_month == 2)]\n",
+    "res = winter_films.pivot_table(values='imdb_id', index=\"director\", aggfunc=\"count\").sort_values('imdb_id', ascending=False)\n",
+    "answers['23'] = 'Peter Jackson +'\n",
+    "##\n",
+    "\n",
+    "titles = pd.DataFrame({'companie': companies, 'count': 0})\n",
+    "# titles.count = len(data[data.production_companies.str.contains(titles.companie) & len(data.original_title) == max(len(data.original_title))].original_title)\n",
+    "# titles\n",
+    "\n",
+    "for x in companies:\n",
+    "    s = pd.DataFrame(data[data.production_companies.str.contains(x)].original_title)\n",
+    "    titles[titles.companie == x] = max(s.original_title.str.len())\n",
+    "titles\n",
+    "# titles[titles.companie == 'Legendary Pictures']['count'] = 1\n",
+    "# titles[titles.companie == 'Legendary Pictures']['count']\n",
+    "# Legendary Pictures\t\t\n",
+    "# res = data.pivot_table(values='original_title', index=companies, aggfunc={'original_title': len})\n",
+    "# res\n",
+    "\n",
     "\n"
    ]
   },
